[project]
name = "teslamate-mcp"
version = "0.2.0"
description = "A Model Context Protocol (MCP) server that provides access to your TeslaMate database, allowing AI assistants to query Tesla vehicle data and analytics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mert Cobanov", email = "mertcobanov@gmail.com"},
]
keywords = ["tesla", "teslamate", "mcp", "model-context-protocol", "ai", "assistant", "vehicle-data"]
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mcp[cli]>=1.10.1",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "uvicorn>=0.25.0",
    "starlette>=0.36.0",
    "fastmcp>=2.10.1",
]

[project.scripts]
teslamate-mcp = "main:main"
